# spotmicro_description

./: CMakeLists.txt  package.xml
launch/: description.launch  view_urdf.launch  view_urdf_rviz.launch.py
rviz/: view_rviz2.rviz
urdf/: spotmicroai.urdf  spotmicroai.urdf.xacro  stairs.urdf.xacro
